# cog-flux

./: README.md  bfl_predictor.py  diffusers_predictor.py  main.py  predict.py  pyproject.toml
development/: fliu_quantize.py  flux_gguf.py  hyper-sd.py  hyper_sd_merging.py  hypersd-4bit.py  hypersd-8bit.py  ip_adapter_flux.py
flux/: util.py
flux/modules/: conditioner.py
fp8/: lora_loading.py
fp8/configs/: config-1-flux-dev-fp8-h100.json
