[project]
name = "cog-flux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision",
    "numpy",
    "einops",
    "fire",
    "huggingface-hub",
    "safetensors",
    "sentencepiece",
    "transformers",
    "tokenizers",
    "protobuf",
    "diffusers",
    "loguru",
    "pybase64",
    "pydash",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "accelerate>=1.4.0",
    "dotenv>=0.9.9",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
peft = { git = "https://github.com/BenjaminBossan/peft" }
